--- a/workout.html
+++ b/workout.html
@@ -23,6 +23,14 @@
             <a href="#" class="nav-btn">Join Us</a>
         </div>
      </header>
+     <script>
+        const menuIcon = document.getElementById('menu-icon');
+        const navbar = document.querySelector('.navbar');
+    
+        menuIcon.addEventListener('click', () => {
+            navbar.classList.toggle('active');
+        });
+    </script>
      <!-- Workout Routine Section -->
     <section class="workout-section">
         <h1>Workout Routines</h1>
@@ -69,6 +77,34 @@
                 <li><strong>Exercise:</strong> Mountain Climbers – 3 sets, 1 minute</li>
             </ul>
         </div>
+        <footer class="footer">
+            <div class="footer-container">
+                <div class="footer-col">
+                    <h3>Useful Links</h3>
+                    <a href="index.html">Home</a>
+                    <a href="workout.html">Workout</a>
+                    <a href="nutrition.html">Nutrition</a>
+                    <a href="photos.html">Photo Gallery</a>
+                    <a href="contact.html">Contact Us</a>
+                </div>
+                <div class="footer-col">
+                    <h3>Newsletter</h3>
+                    <form>
+                        <input type="email" placeholder="Your email address" required>
+                        <button type="submit">Sign Up</button>
+                    </form>
+                </div>
+                <div class="footer-col">
+                    <h3>Contact</h3>
+                    <p>Wadi al Hadraj, As-safa 1, Jeddah KSA</p>
+                    <p>Email: xyz@gmail.com</p>
+                    <p>Phone: +92 123 5689</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Fitness Hub. All Rights Reserved.</p>
+            </div>
+        </footer>
     </section>
     <script>
         // JavaScript to toggle between routines
